<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4"
    android:orientation="horizontal">

    <Button
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/ce" />

    <Button
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/_0" />

    <Button
        android:layout_gravity="fill"
        android:layout_rowSpan="3"
        android:text="@string/c" />

    <Button android:text="@string/_1" />

    <Button android:text="@string/_2" />

    <Button android:text="@string/_3" />

    <Button android:text="@string/_4" />

    <Button android:text="@string/_5" />

    <Button android:text="@string/_6" />

    <Button android:text="@string/_7" />

    <Button android:text="@string/_8" />

    <Button android:text="@string/_9" />

    <Button
        android:layout_gravity="fill"
        android:layout_columnSpan="4"
        android:text="@string/mult" />

    <Button
        android:layout_column="3"
        android:text="@string/plus" />

    <Button
        android:layout_column="3"
        android:text="@string/minus" />

    <Button
        android:layout_column="3"
        android:text="@string/division" />

</GridLayout>